# Rust_Task_With_Time_Keeping_And_Live_Note

./: .gitignore  DISTRIBUTION.md  README.md  cargo.toml  quotes_export.json  settings.json
RotateTest/: Cargo.toml
RotateTest/src/: main.rs
archive/: CONTENTS.md  build_err.txt  build_error.txt  build_error_2.txt  build_error_3.txt  cargo_check_output.txt  cargo_check_results.txt  check.txt  check_out.txt  check_out_final.txt  check_output.txt  err.txt  index.html  layout.txt  output.txt
archive/RotateTest/: README.md
archive/rotateNew/: build_log.txt  error.txt  index.html
archive/rotateNew/AnotherExample/: New Text Document (2).txt  New Text Document.txt
archive/rotateNew/AnotherExample/RotationGuide/: index.html
archive/rotateNew/AnotherExample/html/: index.html
archive/rotateNew/AnotherExample/src/: main.rs
archive/rotateNew/html/: index.html
archive/rotateNew/src/: main.rs
background/: Cargo.toml  build_errors.txt  check_out_bg.txt  error.txt  error_utf8.txt  errors.txt  errors2.txt  main_copy.rs
background/src/: main.rs
rotateNew/: build.txt  cargo.toml
rotateNew/AnotherExample/: Cargo.toml
rotateNew/src/: styles.rs
src/: main.rs
