# Cargo.toml — Pure native Rust (no WASM, no browser)

[package]
name    = "rotate-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"    # egui framework — GPU-rendered native GUI
epaint = "0.28"    # needed for TextShape (rotated text rendering)

# ─────────────────────────────────────────────────────────
# Build & run:
#   cargo run
#
# That's it. No trunk, no wasm-pack, no wasm32 target,
# no index.html, no browser. A native desktop window
# with OpenGL/wgpu rendering and real rotation via
# the Painter API + 2D rotation matrix.
#
# KEY FIX: Text rotation uses TextShape { angle }
# instead of painter.text() which keeps glyphs
# axis-aligned (screen-horizontal) regardless of
# position rotation. TextShape.angle rotates the
# actual rendered glyphs.
# ─────────────────────────────────────────────────────────